k8s/100-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  namespace: liferaynetes
spec:
  serviceName: liferay
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: mattipaksula/liferaynetes
        resources:
          limits:
            memory: "2048M"
            cpu: "2"
