k8s/100-web.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  namespace: liferaynetes
spec:
  serviceName: liferay
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: web
        image: mattipaksula/liferaynetes
        resources:
          requests:
            memory: "512M"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "8"
        volumeMounts:
          - name:  document-library
            mountPath: /app/data/document_library
      volumes:
        - name: document-library
          persistentVolumeClaim:
            claimName: nfs-claim
