k8s/100-elasticsearch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: liferaynetes
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:6.5.4
        resources:
          requests:
            memory: "512M"
            cpu: "0.1"
          limits:
            memory: "2048M"
            cpu: "8.0"
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: liferaynetes
spec:
  selector:
    app: elasticsearch
  ports:
  - port: 9300
    targetPort: 9300
